k8s/dev/deployment.yaml
---
# create deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    product: sre-perf-ls-core-service
    product_id: sre-perf-ls-core-service
    k8s-app: sre-perf-ls-core-service
  name: sre-perf-ls-core-service
  namespace: loadstar-coresvc
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      k8s-app: sre-perf-ls-core-service
  strategy: {}
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"              # scrape me
        prometheus.io/port: "8080"          # at this port
        prometheus.io/path: "/actuator/prometheus" # at this path 
        vault.security.banzaicloud.io/vault-addr: "https://vault.maersk-digital.net"
        vault.security.banzaicloud.io/vault-skip-verify: "true"
        vault.security.banzaicloud.io/vault-role: "loadstar-coresvc"                 
      creationTimestamp: null
      labels:
        product: sre-perf-ls-core-service
        k8s-app: sre-perf-ls-core-service
        product_id: ipace-coresvc
        env: dev
        app: sre-perf-ls-core-service
        provider: azure
        region: westeurope
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: team
                    operator: In
                    values:
                      - loadstar
      containers:
      - image: crgazweloadstardev01.azurecr.io/sre-perf-ls-core-service:05fd93f5153c298c63cb025f0bacf9acc3de5214
        imagePullPolicy: Always
        name: sre-perf-ls-core-service
        ports:
          - containerPort: 8080
            name: http
            protocol: TCP
        resources:
          requests:
            cpu: "50m"
            memory: "500Mi"
          limits:
            cpu: "100m"
            memory: "750Mi"
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 400
          periodSeconds: 10
          timeoutSeconds: 60
          successThreshold: 1
          failureThreshold: 4  
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 460
          periodSeconds: 20
          timeoutSeconds: 60
          successThreshold: 1
          failureThreshold: 4  
        volumeMounts:
        - mountPath: "/var/loadstar"
          name: pvc 
      volumes:
        - name: pvc
          persistentVolumeClaim:
            claimName: coresvc-pvc    
      imagePullSecrets:  
      - name: coresvc-cred
status: {}
